@@ -6,6 +6,8 @@ Overview of changes in lightdm 0.3.3
     * Greeters can now detect user add/remove events
     * Fix ConsoleKit support broken with switch to GDBus
     * Correctly clean up X processes on exit
+    * Wait for greeter to quit before running user session (fixes problem with
+      Compiz)
 
 Overview of changes in lightdm 0.3.2
 
